--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ decorator==5.1.1
 executing==1.2.0
 Flask==2.3.2
 flask-shell-ipython==0.5.1
+Flask-SQLAlchemy==3.0.3
+greenlet==2.0.2
 ipython==8.14.0
 itsdangerous==2.1.2
 jedi==0.18.2
@@ -20,7 +22,9 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.15.1
 six==1.16.0
+SQLAlchemy==2.0.15
 stack-data==0.6.2
 traitlets==5.9.0
+typing-extensions==4.6.3
 wcwidth==0.2.6
 Werkzeug==2.3.4
